EOEPCA-163 Updated workflows

--- a/.github/workflows/pricing.yml
+++ b/.github/workflows/pricing.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Pricing Engine BB Workflow
+name: License Manager BB Workflow
 
 # Controls when the action will run. 
 on:
@@ -10,6 +10,7 @@ on:
       - master
       - develop
       - 'release/**'
+      - 'feature/EOEPCA-163'
   pull_request:
     branches:
       - master
@@ -44,12 +45,12 @@ jobs:
           pip install -r ./src/requirements.txt
           pytest ./tests
       - name: Container Creation and Publishing
-        run: ./travis/containerCreation.sh um-pricing-engine
+        run: ./travis/containerCreation.sh um-license-manager
       - name: Smoke and Acceptance Test
-        run: ./travis/acceptanceTest.sh um-pricing-engine 8080 7000
+        run: ./travis/acceptanceTest.sh um-license-manager 8080 7000
       - name: Release Container
         if: github.ref == 'refs/heads/master' && github.event != 'pull_request'
-        run: ./travis/release.sh um-pricing-engine
+        run: ./travis/release.sh um-license-manager
         
       
         
