--- a/.github/workflows/pricing_documentation.yml
+++ b/.github/workflows/pricing_documentation.yml
@@ -10,6 +10,7 @@ on:
       - master
       - develop
       - 'release/**'
+      - 'feature/EOEPCA-163'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
