--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,20 +3,9 @@
 name: License Manager Test Workflow
 
 # Controls when the action will run. 
-on:
+on: push
   # Triggers the workflow on push or pull request events but only for the develop branch
-  push:
-    branches:
-      - master
-      - develop
-      - 'release/**'
-      - 'feature/EOEPCA-163'
-  pull_request:
-    branches:
-      - master
-      - develop
-      - 'release/**'
-
+  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # Set the job key. The key is displayed as the job name
