--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,14 +3,9 @@
 name: Pricing Engine Documentation
 
 # Controls when the action will run. 
-on:
+on: push
   # Triggers the workflow on push or pull request events but only for the develop branch
-  push:
-    branches:
-      - master
-      - develop
-      - 'release/**'
-      - 'feature/EOEPCA-163'
+ 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
