--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Pricing Engine Documentation
+name: License Manager Documentation
 
 # Controls when the action will run. 
 on: push
