--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,7 +21,12 @@ jobs:
         uses: actions/checkout@v2
       # Runs a set of commands using the runners shell
       - name: Generate the docs
-        run: ./docs/bin/generate-docs.sh
+        run: |
+              cd ./docs/bin/
+              ./generate-docs.sh
      
       - name: Publish the docs
-        run: ./docs/bin/publish-docs.sh
+        run: |
+              cd ./docs/bin/
+              ./publish-docs.sh
+
