--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,9 +3,14 @@
 name: License Manager Documentation
 
 # Controls when the action will run. 
-on: push
+on:
   # Triggers the workflow on push or pull request events but only for the develop branch
- 
+  push:
+    branches:
+      - master
+      - develop
+      - 'release/**'
+      - 'feature/EOEPCA-163'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,12 +26,6 @@ jobs:
         uses: actions/checkout@v2
       # Runs a set of commands using the runners shell
       - name: Generate the docs
-        run: |
-              cd ./docs/bin/
-              ./generate-docs.sh
-     
+        run: ./docs/bin/generate-docs.sh
       - name: Publish the docs
-        run: |
-              cd ./docs/bin/
-              ./publish-docs.sh
-
+        run: ./docs/bin/publish-docs.sh
